<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieMove</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="drawer_open" translatable="false">Open drawer</string>
    <string name="drawer_close" translatable="false">Close drawer</string>

    <!-- Navigation View -->
    <string name="navigation_home">Home</string>
    <string name="navigation_my_movie">My Movie</string>
    <string name="navigation_purchase_list">Purchase List</string>
    <string name="navigation_reservation_check">Reservation Check</string>
    <string name="navigation_my_page">My Page</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_help">Help</string>

</resources>
